<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="Weather Location">
        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="USE_DEVICE_LOCATION"
            android:summary="@string/current_location_desc"
            android:title="@string/current_location_title" />

        <EditTextPreference
            android:defaultValue="Тула"
            android:dependency="USE_DEVICE_LOCATION"
            android:key="CUSTOM_LOCATION"
            android:summary="@string/any_location_desc"
            android:title="@string/any_location_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="Units">
        <ListPreference
            android:defaultValue="metric"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"
            android:key="UNIT_SYSTEM"
            android:summary="%s"
            android:title="@string/unit_title" />
    </PreferenceCategory>

</PreferenceScreen>