<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/base_corner_radius"
        app:cardElevation="@dimen/base_card_elevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:layout_gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:backgroundTint="@color/grey"
                    app:cardCornerRadius="@dimen/day_icon_corner_radius"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/tvDayIcon"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:padding="@dimen/extra_small_margin"
                        android:contentDescription="@string/current_temperature_symbol"
                        tools:src="@drawable/ic_sunny" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvDayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="@string/test_date" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDayCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/between_margin"
                    android:textAlignment="center"
                    android:textSize="@dimen/header_text_size"
                    tools:text="@string/just_sunny_weather" />

                <TextView
                    android:id="@+id/tvDayTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/between_margin"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="@string/temperature_information" />


                <TextView
                    android:id="@+id/tvDayWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/between_margin"
                    android:textAlignment="center"
                    tools:text="@string/wind_info" />

                <TextView
                    android:id="@+id/tvDayClouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/between_margin"
                    android:textAlignment="center"
                    tools:text="@string/clouds_info" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/between_margin"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/tvDayRainy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_baseline_water_drop"
                        android:contentDescription="@string/rain_temperature_symbol"
                        tools:background="@drawable/ic_baseline_water_drop" />

                    <TextView
                        android:id="@+id/tvDayRain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/small_margin"
                        android:textAlignment="center"
                        android:textSize="@dimen/standard_text_size"
                        tools:text="@string/test_percentage" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>