<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srlOpenSwipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/svForecastFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/open_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.current_fragment.CurrentFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMainCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/base_corner_radius"
                app:cardElevation="@dimen/base_card_elevation"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/medium_margin"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvTemperature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/extra_text_size"
                                tools:text="@string/current_temp" />

                            <TextView
                                android:id="@+id/tvFeelsLike"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha="0.6"
                                tools:text="@string/feels_like" />

                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/medium_margin"
                            android:backgroundTint="?attr/backgroundViolet"
                            app:cardCornerRadius="@dimen/main_icon_corner_radius"
                            app:cardElevation="0dp">

                            <ImageView
                                android:id="@+id/ivCurrentWeatherIcon"
                                android:layout_width="@dimen/weather_icon_size"
                                android:layout_height="@dimen/weather_icon_size"
                                android:contentDescription="@string/current_temperature_symbol"
                                android:padding="@dimen/small_margin"
                                tools:src="@drawable/ic_sunny" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:alpha="0.8"
                        android:textSize="@dimen/header_text_size"
                        tools:text="@string/test_city" />

                    <TextView
                        android:id="@+id/tvCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginTop="@dimen/extra_small_margin"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:layout_marginBottom="@dimen/medium_margin"
                        android:alpha="0.7"
                        android:textSize="@dimen/standard_text_size"
                        tools:text="@string/sunny_today" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/llAdditional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvMainCard">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/extra_margin"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/humidity"
                        android:src="@drawable/ic_baseline_water_drop" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        tools:text="Humidity" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/extra_margin"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/wind_speed"
                        android:src="@drawable/ic_baseline_waves" />


                    <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        tools:text="Wind speed" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/clouds"
                        android:src="@drawable/ic_outline_cloud" />

                    <TextView
                        android:id="@+id/tvClouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_margin"
                        tools:text="Clouds" />

                </LinearLayout>

            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/hsvItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llAdditional">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHoursRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_margin"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAskPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/base_corner_radius"
                app:cardElevation="@dimen/base_card_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hsvItems">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/extra_margin"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_ask_a_permission_and_pull_to_update" />

                    <Button
                        android:id="@+id/bAskPermission"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_margin"
                        android:text="@string/ask_for_a_permission" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>